--- a/src/style.css
+++ b/src/style.css
@@ -101,6 +101,7 @@ ________________________________________________________________________________
     --color-primary-lightest: #f4f4f4;
     --color-accent: #a445ed;
     --color-error: #ff5252;
+    --color-bg: #ffffff;
 }
 
 body {
@@ -150,6 +151,7 @@ body {
     padding: 1rem;
     opacity: 0;
     translate: 0 -25%;
+    z-index: 1;
     transition: opacity 200ms ease-in-out, translate 200ms ease-in-out;
 }
 
@@ -210,4 +212,37 @@ body {
 
 .dark-mode p.active {
     color: var(--color-accent);
+}
+
+/* search */
+
+.searchbar {
+    position: relative;
+    margin-top: 3rem;
+}
+
+.searchbar input {
+    outline: none;
+    border: 1px solid var(--color-primary-light);
+    border-radius: 1rem;
+    padding: 0.5rem 1rem;
+    width: 100%;
+    height: 40px;
+    font-size: var(--fs-body-s);
+    font-family: var(--ff-sans-serif);
+    color: var(--color-primary-light);
+    transition: border 200ms ease-in-out;
+}
+
+.searchbar input:focus,
+.searchbar input:hover {
+    border: 1px solid var(--color-accent);
+}
+
+.searchbar button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border: none;
+    background-color: var(--color-bg);
 }
