--- a/src/style.css
+++ b/src/style.css
@@ -111,6 +111,12 @@ body {
     margin: 0 auto;
 }
 
+#root {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
 .header {
     user-select: none;
     display: flex;
@@ -218,18 +224,18 @@ body {
 
 .searchbar {
     position: relative;
-    margin-top: 3rem;
+    margin: auto 0;
 }
 
 .searchbar input {
     outline: none;
     border: 1px solid var(--color-primary-light);
+    background-color: var(--color-primary-lightest);
     border-radius: 1rem;
     padding: 0.5rem 1rem;
     width: 100%;
     height: 40px;
     font-size: var(--fs-body-s);
-    font-family: var(--ff-sans-serif);
     color: var(--color-primary-light);
     transition: border 200ms ease-in-out;
 }
@@ -244,5 +250,39 @@ body {
     top: 10px;
     right: 10px;
     border: none;
+    background-color: var(--color-primary-lightest);
+}
+
+/* main */
+
+/* main head */
+.main-head {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+
+.head-left h1 {
+    font-size: var(--fs-heading-l);
+    font-weight: var(--fw-boldest);
+    line-height: 77px;
+}
+
+.pronounciation {
+    font-size: var(--fs-heading-m);
+    font-weight: var(--fw-normal);
+    color: var(--color-accent);
+}
+
+.play-button {
+    border: none;
     background-color: var(--color-bg);
+    cursor: pointer;
+}
+
+/* main body */
+
+.noun-divider {
+    display: flex;
 }
