--- a/src/style.css
+++ b/src/style.css
@@ -90,6 +90,7 @@ ________________________________________________________________________________
     --ff-mono: Inconsolata, monospace;
     --fs-heading-l: 64px;
     --fs-heading-m: 24px;
+    --fs-heading-s: 20px;
     --fs-body-m: 18px;
     --fs-body-s: 14px;
     --fw-normal: normal;
@@ -107,8 +108,39 @@ ________________________________________________________________________________
 body {
     font-family: var(--ff-sans-serif);
     color: var(--color-primary);
-    max-width: 737px;
+    max-width: 800px;
     margin: 0 auto;
+    font-size: var(--fs-body-m);
+}
+
+h2 {
+    font-size: var(--fs-heading-m);
+    font-weight: var(--fw-bold);
+    font-style: italic;
+}
+
+h3 {
+    font-size: var(--fs-heading-s);
+    font-weight: var(--fw-normal);
+    color: var(--color-primary-light);
+}
+
+h4 {
+    color: var(--color-primary-light);
+    font-size: var(--fs-body-s);
+}
+
+li {
+    padding-bottom: 0.75rem;
+}
+
+li::marker {
+    color: var(--color-accent);
+}
+
+hr {
+    height: 0;
+    border: 2px solid var(--color-primary-lightest);
 }
 
 #root {
@@ -169,8 +201,8 @@ body {
 }
 
 .select-current {
+    width: 100px;
     font-weight: var(--fw-bold);
-    width: 85px;
 }
 
 .select-modal-item#sans-serif {
@@ -254,7 +286,11 @@ body {
 }
 
 /* main */
-
+.main {
+    width: 90%;
+    margin-left: 60px;
+    padding-bottom: 1.5rem;
+}
 /* main head */
 .main-head {
     display: flex;
@@ -283,6 +319,57 @@ body {
 
 /* main body */
 
-.noun-divider {
+.noun-divider,
+.verb-divider {
     display: flex;
+    align-items: center;
+    margin-bottom: 40px;
+    gap: 1rem;
+}
+
+.body-noun-container h3,
+.body-verb-container h3 {
+    margin-bottom: 1.5rem;
+}
+
+.divider {
+    flex-grow: 1;
+    height: 0px;
+    border-top: 1px solid var(--color-primary-lightest);
+}
+
+.synonyms-container {
+    display: flex;
+    align-items: center;
+    margin: 2rem 0;
+}
+
+.synonyms {
+    display: flex;
+    align-items: center;
+    padding-inline-start: 1rem;
+}
+.synonyms li {
+    list-style: none;
+    padding: 0 1rem;
+}
+
+.synonyms a {
+    color: var(--color-accent);
+    font-size: var(--fs-heading-s);
+    font-weight: var(--fw-bold);
+    text-decoration: none;
+}
+
+/* main footer */
+
+.main-footer {
+    margin-top: 1rem;
+    display: flex;
+    gap: 1rem;
+    font-size: var(--fs-body-s);
+    align-items: center;
+}
+.main-footer a {
+    color: var(--color-primary-light);
 }
