--- a/src/style.css
+++ b/src/style.css
@@ -272,8 +272,12 @@ hr {
     transition: border 200ms ease-in-out;
 }
 
-.searchbar input:focus,
-.searchbar input:hover {
+.searchbar input.invalid {
+    border: 1px solid var(--color-error);
+}
+
+.searchbar input:focus:not(.invalid),
+.searchbar input:hover:not(.invalid) {
     border: 1px solid var(--color-accent);
 }
 
@@ -283,6 +287,21 @@ hr {
     right: 10px;
     border: none;
     background-color: var(--color-primary-lightest);
+}
+
+.error-text {
+    user-select: none;
+    color: var(--color-error);
+    font-size: var(--fs-body-s);
+    font-weight: var(--fw-bold);
+    padding-left: 2rem;
+    padding-top: 0.25rem;
+    opacity: 0;
+    transition: opacity 100ms ease-in-out;
+}
+
+.error-text.active {
+    opacity: 1;
 }
 
 /* main */
@@ -315,6 +334,14 @@ hr {
     border: none;
     background-color: var(--color-bg);
     cursor: pointer;
+}
+
+.play-button svg g {
+    transition: fill 200ms ease-in-out;
+}
+
+.play-button svg g.disabled {
+    fill: var(--color-primary);
 }
 
 /* main body */
@@ -354,7 +381,7 @@ hr {
     padding: 0 1rem;
 }
 
-.synonyms a {
+.synonyms p {
     color: var(--color-accent);
     font-size: var(--fs-heading-s);
     font-weight: var(--fw-bold);
