--- a/src/style.css
+++ b/src/style.css
@@ -171,6 +171,7 @@ hr {
     display: flex;
     gap: 0.5rem;
     position: relative;
+    cursor: pointer;
 }
 
 .select-modal {
@@ -230,6 +231,11 @@ hr {
     font-size: var(--fs-body-s);
     gap: 0.5rem;
     cursor: pointer;
+    transition: filter 200ms ease-in-out;
+}
+
+.dark-mode:hover {
+    filter: brightness(0.7);
 }
 
 .dark-mode svg {
@@ -274,6 +280,10 @@ hr {
 
 .searchbar input.invalid {
     border: 1px solid var(--color-error);
+}
+
+.searchbar input.transition {
+    background-color: aqua;
 }
 
 .searchbar input:focus:not(.invalid),
@@ -338,8 +348,12 @@ hr {
     cursor: pointer;
 }
 
+.play-button svg g:not(.disabled):hover {
+    filter: brightness(1.2);
+}
+
 .play-button svg g {
-    transition: fill 200ms ease-in-out;
+    transition: fill 200ms ease-in-out, filter 200ms ease-in-out;
 }
 
 .play-button svg g.disabled {
