--- a/src/style.css
+++ b/src/style.css
@@ -113,8 +113,10 @@ body {
     font-family: var(--ff-sans-serif);
     background-color: var(--color-bg);
     color: var(--color-primary);
+    width: 100vw;
     max-width: 800px;
     margin: 0 auto;
+    padding: 1rem;
     font-size: var(--fs-body-m);
     transition: background-color 400ms ease-in-out;
 }
@@ -132,6 +134,7 @@ h3 {
 }
 
 h4 {
+    display: none;
     color: var(--color-primary-light);
     font-size: var(--fs-body-s);
 }
@@ -268,7 +271,8 @@ hr {
 
 .searchbar {
     position: relative;
-    margin: auto 0;
+    margin-top: 2rem;
+    margin-bottom: 1rem;
 }
 
 .searchbar input {
@@ -325,7 +329,7 @@ hr {
 /* main */
 .main {
     width: 90%;
-    margin-left: 60px;
+    margin-left: 0px;
     padding-bottom: 1.5rem;
 }
 /* main head */
@@ -357,6 +361,11 @@ hr {
     overflow: hidden;
     cursor: pointer;
     transition: background-color 400ms ease-in-out;
+}
+
+.play-button svg {
+    width: 50px;
+    height: 50px;
 }
 
 .play-button svg g:not(.disabled):hover {
@@ -398,6 +407,10 @@ hr {
     margin: 2rem 0;
 }
 
+.synonyms-container h3 {
+    margin-bottom: 0;
+}
+
 .synonyms {
     display: flex;
     align-items: center;
@@ -426,4 +439,26 @@ hr {
 }
 .main-footer a {
     color: var(--color-primary-light);
+}
+
+@media screen and (min-width: 800px) {
+    .main {
+        margin-left: 60px;
+    }
+}
+
+@media screen and (min-width: 376px) {
+    .play-button svg {
+        width: 75px;
+        height: 75px;
+    }
+
+    .searchbar {
+        margin-top: 3rem;
+        margin-bottom: 2rem;
+    }
+
+    h4 {
+        display: inline;
+    }
 }
