--- a/src/style.css
+++ b/src/style.css
@@ -117,8 +117,7 @@ body {
     font-family: var(--ff-sans-serif);
     background-color: var(--color-bg);
     color: var(--color-primary);
-    width: 100vw;
-    max-width: 800px;
+    max-width: 100vw;
     margin: 0 auto;
     padding: 1rem;
     font-size: var(--fs-body-m);
@@ -202,7 +201,7 @@ hr {
     padding: 1rem;
     opacity: 0;
     translate: 0 -25%;
-    z-index: 1;
+    z-index: 3;
     transition: opacity 200ms ease-in-out, translate 200ms ease-in-out;
 }
 
@@ -211,6 +210,7 @@ hr {
     pointer-events: auto;
     opacity: 1;
     translate: 0 0;
+    z-index: 3;
 }
 
 .select-current {
@@ -286,6 +286,7 @@ hr {
     padding: 0.5rem 1rem;
     width: 100%;
     height: 40px;
+    z-index: -1;
     font-size: var(--fs-body-s);
     color: var(--color-primary-light);
     transition: border 200ms ease-in-out;
@@ -445,6 +446,10 @@ hr {
 }
 
 @media screen and (min-width: 800px) {
+    body {
+        max-width: 800px;
+    }
+
     .main {
         margin-left: 60px;
     }
